--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700);
+
 input, select, button {
   outline: none !important; }
 
@@ -3455,7 +3456,6 @@ body {
 
 .table.cart-items thead tr th.product {
   width: 400px !important;
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   line-height: 28px;
@@ -3469,7 +3469,6 @@ body {
 
 .table.cart-items thead tr th.quantity::before {
   content: "Qtd.";
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
@@ -3478,7 +3477,6 @@ body {
  }
 
 .table.cart-items thead tr th.product-price, .table.cart-items thead tr th.quantity-price {
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
