--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,32 +1,31 @@
-
 $white: #fff;
-$primary-pink: #FF69B4;
+$primary-pink: #ff69b4;
 $primary-dark: #000;
-$primary-default: #111;
-$primary-light: #DDD; 
-$secondary-default: #E30613;
-$secondary-dark: #BD000B;
-$secondary-light: #E30613;
-$blue-dark: #4320A8;
-$suport-color-01: #5E595A;
-$suport-color-02: #27292D;
-$suport-color-03: #B18808;
-$suport-color-04: #FD4D1E;
-$suport-color-05: #BB1D64;
-$suport-color-06: #5C1373;
+$primary-default: #332c32;
+$primary-light: #ddd;
+$secondary-default: #e30613;
+$secondary-dark: #bd000b;
+$secondary-light: #e30613;
+$blue-dark: #4320a8;
+$suport-color-01: #5e595a;
+$suport-color-02: #27292d;
+$suport-color-03: #b18808;
+$suport-color-04: #fd4d1e;
+$suport-color-05: #bb1d64;
+$suport-color-06: #5c1373;
 $suport-color-07: #220219;
-$suport-color-08: #2B6F6D;
-$system-alert-default: #E32000;
-$system-alert-light: #FEE7E5;
-$system-warning-default: #FFE01A;
-$system-warning-light: #FEFBC1;
-$system-success-default: #2C5A18;
-$system-success-light: #E6F6EC;
+$suport-color-08: #2b6f6d;
+$system-alert-default: #e32000;
+$system-alert-light: #fee7e5;
+$system-warning-default: #ffe01a;
+$system-warning-light: #fefbc1;
+$system-success-default: #2c5a18;
+$system-success-light: #e6f6ec;
 $darkgrey-dark: #111;
 $darkgrey-medium: #555;
 $darkgrey-light: #999;
-$lightgrey-medium: #CCC;
-$lightgrey-light: #DDD;
+$lightgrey-medium: #ccc;
+$lightgrey-light: #ddd;
 $lightgrey-lighter: #f2f2f2;
 $lines-dark: #111;
 $link-default-small: 0.75rem;
@@ -56,11 +55,11 @@ $price-to: 1.12rem;
 $card-hover: 16px 0 8px rgba(0, 0, 0, 0.08);
 $card-default: 4px 0 2px rgba(0, 0, 0, 0.04);
 
-$primary-gold: #E3C963;
-$primary-text-dark: #1D1E2C;
+$primary-gold: #e3c963;
+$primary-text-dark: #1d1e2c;
 $background-blue-black: #232946;
-$background-categorie-hover: #E0E9F3;
-$background-footer: #292F33;
-$background-bottom-footer: #17171B;
+$background-categorie-hover: #e0e9f3;
+$background-footer: #292f33;
+$background-bottom-footer: #17171b;
 $blue-active: #291660;
-$blue-hover: #0B1658;
+$blue-hover: #0b1658;
