--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -1,33 +1,83 @@
 @import '../_media-queries.scss';
 @import '../_variables.scss';
 
-.flexColChild--specificationNameCol {
-  [data-specification-name='Premium']::after {
-    content: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
-    margin: 24px 0 0 22px;
-    @include mobile {
-      margin: 0;
+.flexColChild {
+  &--specificationNameCol {
+    [data-specification-name='Premium']::after {
+      content: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
+      margin: 24px 0 0 22px;
+      @include mobile {
+        margin: 0;
+        position: relative;
+        top: -30px;
+        left: 120px;
+      }
+    }
+    [data-specification-name='Spedizione gratuita']::after {
+      content: url(https://bricobravo.vtexassets.com/arquivos/ids/155410-22-22?v=637920420622130000&width=75&height=15&aspect=true);
       position: relative;
-      top: -30px;
-      left: 120px;
+      top: -4px;
+      left: -4px;
+      @include mobile {
+        top: -36px;
+        left: 106px;
+      }
     }
   }
-  [data-specification-name='Spedizione gratuita']::after {
-    content: url(https://bricobravo.vtexassets.com/arquivos/ids/155410-22-22?v=637920420622130000&width=75&height=15&aspect=true);
-    position: relative;
-    top: -4px;
-    left: -4px;
+
+  &--pdp-shipping-type {
+    .flexColChild--specificationNameCol {
+      display: flex;
+
+      [data-specification-name='Premium']::after {
+        content: '';
+        background-image: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
+        background-size: contain;
+        display: inline-block;
+        background-repeat: no-repeat;
+        height: 1.25rem;
+        width: 6.5rem;
+        margin: 0 0 0 0.25rem;
+        @include mobile {
+          margin: 0;
+          position: relative;
+          top: -30px;
+          left: 120px;
+        }
+      }
+      [data-specification-name='Spedizione gratuita']::after {
+        content: '';
+        background-image: url(https://bricobravo.vtexassets.com/arquivos/ids/155410-22-22?v=637920420622130000&width=75&height=15&aspect=true);
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: inline-block;
+        height: 20px;
+        width: 100px;
+        @include mobile {
+          position: relative;
+          top: -36px;
+          left: 106px;
+        }
+      }
+    }
+  }
+
+  &--assembly-options :first-child {
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  &--assembly-options :global(.vtex-button) {
+    width: 100%;
+  }
+
+  &--product-availability-and-quantity {
     @include mobile {
-      top: -36px;
-      left: 106px;
+      width: 280px;
     }
   }
 }
-.flexRowContent--productSpecificationItem {
-  @include mobile {
-    height: 0;
-  }
-}
+
 .flexRow--cartSummary {
   border-bottom: 1px solid #d8d8d8;
   margin-bottom: 1rem;
@@ -44,68 +94,49 @@
 
 /* Product Page */
 
-.flexRowContent--priceSavings {
-  display: flex;
-}
+.flexRowContent .flexRowContent {
+  &--buy-box {
+    border: 1px solid #e5e5e5;
+    border-radius: 4px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 
-.flexRowContent--box,
-:global(.vtex-store-components-3-x-subscriberContainer) {
-  max-width: 420px;
+    .flexCol--box {
+      display: flex;
+      align-items: center;
+    }
 
-  @include mobile {
-    max-width: 100%;
-    width: 100%;
+    .flexColChild--box {
+      max-width: 17.5rem;
+      width: 100%;
+    }
   }
-}
 
-.flexRowContent--buy-box {
-  border: 1px solid #e5e5e5;
-  border-radius: 4px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  &--box-unavailable {
+    justify-content: space-between;
 
-  .flexCol--box {
+    .stretchChildrenWidth {
+      width: 100% !important;
+    }
+  }
+
+  &--box,
+  :global(.vtex-store-components-3-x-subscriberContainer) {
+    max-width: 420px;
+
+    @include mobile {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+
+  &--priceSavings {
     display: flex;
-    align-items: center;
-  }
-
-  .flexColChild--box {
-    max-width: 17.5rem;
-    width: 100%;
-  }
-}
-
-.flexRowContent--box-unavailable {
-  justify-content: space-between;
-
-  .stretchChildrenWidth {
-    width: 100% !important;
   }
 }
 
 .flexRow--product-name {
   margin-bottom: 8px;
-}
-
-.flexRow--product-identifier {
-  margin-bottom: 20px;
-
-  .stretchChildrenWidth:last-child {
-    text-align: end;
-  }
-
-  @include mobile {
-    .flexRow--completeDescriptionCol,
-    .flexRowContent--identifierRatingRow .stretchChildrenWidth:first-child {
-      display: none;
-    }
-  }
-
-  .flexRowContent--identifierRatingRow {
-    .stretchChildrenWidth {
-      width: auto !important;
-    }
-  }
 }
 
 .flexCol--reset-text :not(:global(.vtex-fake)),
@@ -128,15 +159,6 @@
   padding: 0;
   border: 0;
   outline: 0;
-}
-
-.flexColChild--assembly-options :first-child {
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.flexColChild--assembly-options :global(.vtex-button) {
-  width: 100%;
 }
 
 @media (max-width: 64rem) {
@@ -169,12 +191,6 @@
 
 .flexRow--product-availability-and-quantity {
   margin-bottom: 1rem;
-}
-
-.flexColChild--product-availability-and-quantity {
-  @include mobile {
-    width: 280px;
-  }
 }
 
 .flexRow--add-to-cart :global(.vtex-button):disabled,
@@ -260,17 +276,31 @@
     padding: 0 4px;
   }
 }
+
 .flexRowChild--table-cell,
 .flexColChild--table-cell {
   display: flex;
   align-items: center;
 }
+
 .flexRow {
   &--breadcrumb {
     padding: 0.5rem 0 1.25rem;
     @include mobile {
       margin-bottom: 1rem;
     }
+  }
+
+  &--pdp-product-name {
+    margin-bottom: 0.75rem;
+  }
+
+  &--pdp-installments {
+    margin-bottom: 0.5rem;
+  }
+
+  &--pdp-quantity-and-add-to-cart-children {
+    margin: 0.5rem 0 1rem;
   }
 
   &Content {
@@ -336,10 +366,6 @@
     :global(.vtex-button)
     :global(.vtex-button__label) {
     padding: 0 1rem;
-  }
-
-  .flexCol--right-col {
-    width: 416px;
   }
 
   .flexRow--product-price {
@@ -524,17 +550,6 @@
     }
   }
 
-  .flexRowContent--product-identifier
-    .stretchChildrenWidth
-    :global(.vtex-store-link-0-x-link--completeDescriptionAnchor) {
-    text-decoration: none;
-    color: $primary-default;
-    font-size: $link-default-small;
-    line-height: $link-default-large;
-    font-weight: 600;
-    text-transform: capitalize;
-  }
-
   // Shelves start
   .flexRow--home-shelf {
     margin: 20px 0;
@@ -565,11 +580,8 @@
       margin-bottom: 1rem;
     }
   }
-  .flexCol--productMain-infos {
+  .flexCol--product-main-infos {
     padding: 0 1.5rem;
-    :global(.vtex-store-components-3-x-productDescriptionContainer) {
-      margin-top: 20px;
-    }
     :global(.vtex-store-components-3-x-productDescriptionTitle) {
       font-size: 0;
       display: none;
@@ -584,10 +596,6 @@
       text-overflow: ellipsis;
       white-space: pre-line;
       overflow: hidden;
-      font-size: 16px;
-      margin: 0 1rem 1rem 0;
-      line-height: 24px;
-      font-weight: 300;
     }
     :global(.vtex-store-link-0-x-link--completeDescriptionAnchor) {
       color: $primary-pink;
@@ -831,10 +839,6 @@
     }
   }
 
-  .flexRowContent--productPage-specificationBenefits {
-    @include container-main;
-  }
-
   .flexRow--productMain-descSpec {
     margin-bottom: 2rem;
     .flexRowContent--productMain-descSpec {
@@ -896,39 +900,6 @@
     }
   }
 
-  .flexRowContent--pdp-Containermanual {
-    :global(.vtex-store-link-0-x-link--pdp-manual) {
-      background-color: $secondary-default;
-      border-radius: 10px;
-      border: none;
-      color: $white;
-      font-size: 1.1rem;
-      padding: 15px;
-      text-align: center;
-      text-decoration: none;
-      width: 250px;
-    }
-  }
-
-  .flexRowContent--alsoView {
-    @include container-main;
-    .flexRowContent--shelfControls {
-      margin: 0 0 1.8rem;
-      padding: 0;
-      justify-content: center;
-      @include mobile {
-        padding-left: 1.2rem;
-      }
-      :global(.vtex-rich-text-0-x-heading--productShelfTitle) {
-        color: $primary-dark;
-        font-size: 2.2rem;
-        font-weight: 300;
-        @include breakpoint('mobile') {
-          font-size: 2rem;
-        }
-      }
-    }
-  }
   .flexCol--productMain-top {
     padding: 0 1.5rem;
   }
@@ -948,31 +919,161 @@
     }
   }
 
-  .flexRowContent--pdp-descriptionIframeSection {
-    @include container-main;
+  &--pdp-price {
+    margin-bottom: 1rem;
   }
 
-  .flexRowContent--pdp-Containergalery {
-    display: flex;
-    margin: 0 auto;
-    flex-flow: row wrap;
-    max-width: 1200px;
+  .flexRowContent {
+    &--pdp-rating-and-whishlist {
+      :global(.vtex-reviews-and-ratings-3-x-star) {
+        margin-right: 0.25rem;
+        color: #e3c963;
+      }
 
-    .stretchChildrenWidth {
-      width: 250px !important;
-      height: 250px !important;
-      margin: 10px;
-      &:first-child {
-        width: 42% !important;
-        height: 42% !important;
+      :global(.vtex-reviews-and-ratings-3-x-stars) {
+        margin-right: 1.25rem;
+        padding-right: 1rem;
+        border-right: solid 1px #bebebe;
+        color: #e3c963;
       }
-      &:nth-child(4n) {
-        margin-left: 44.5%;
-        margin-top: -270px;
+
+      :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+        width: auto !important;
       }
-      &:last-child {
-        margin-top: -270px;
+
+      :global(.vtex-reviews-and-ratings-3-x-inlineContainer) {
+        align-self: center;
       }
+    }
+
+    &--pdp-Containergalery {
+      display: flex;
+      margin: 0 auto;
+      flex-flow: row wrap;
+      max-width: 1200px;
+
+      .stretchChildrenWidth {
+        width: 250px !important;
+        height: 250px !important;
+        margin: 10px;
+        &:first-child {
+          width: 42% !important;
+          height: 42% !important;
+        }
+        &:nth-child(4n) {
+          margin-left: 44.5%;
+          margin-top: -270px;
+        }
+        &:last-child {
+          margin-top: -270px;
+        }
+      }
+    }
+
+    &--pdp-descriptionIframeSection {
+      @include container-main;
+    }
+
+    &--alsoView {
+      @include container-main;
+      .flexRowContent--shelfControls {
+        margin: 0 0 1.8rem;
+        padding: 0;
+        justify-content: center;
+        @include mobile {
+          padding-left: 1.2rem;
+        }
+        :global(.vtex-rich-text-0-x-heading--productShelfTitle) {
+          color: $primary-dark;
+          font-size: 2.2rem;
+          font-weight: 300;
+          @include breakpoint('mobile') {
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+
+    &--pdp-Containermanual {
+      :global(.vtex-store-link-0-x-link--pdp-manual) {
+        background-color: $secondary-default;
+        border-radius: 10px;
+        border: none;
+        color: $white;
+        font-size: 1.1rem;
+        padding: 15px;
+        text-align: center;
+        text-decoration: none;
+        width: 250px;
+      }
+    }
+
+    &--productPage-specificationBenefits {
+      @include container-main;
+    }
+
+    &--productSpecificationItem {
+      @include mobile {
+        height: 0;
+      }
+    }
+
+    &--pdp-shipping {
+      border: 1px solid $primary-light;
+      border-radius: 0.25rem;
+      padding: 1rem;
+      margin-bottom: 1.25rem;
+    }
+
+    &--pdp-product-and-shipping-description {
+      .stretchChildrenWidth {
+        flex-direction: column;
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger) {
+        background-color: transparent;
+        border-top: 1px solid #d8d8d8;
+        border-left: none;
+        border-right: none;
+        border-radius: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger--hidden) {
+        border-bottom: 1px solid #d8d8d8;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger--visible) {
+        border-bottom: none;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+    }
+  }
+
+  .flexCol {
+    &--pdp-quantity {
+      justify-content: flex-end;
+    }
+  }
+
+  .flexColChild {
+    &--pdp-price-and-installments {
+      display: flex;
+      justify-content: flex-start;
     }
   }
 }
