--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -1,50 +1,71 @@
 @import '../_variables.scss';
 @import '../_media-queries.scss';
 
+.savings {
+  &--savingPercentage {
+    position: absolute;
+    top: 6px;
+    left: -1px;
+    font-size: 0;
+    background-color: $blue-dark;
+    height: 20px;
+    width: 38px !important;
+    clip-path: polygon(0% 0%, 70% 0, 100% 50%, 70% 100%, 0% 100%);
 
-.savings--savingPercentage {
-  position: absolute;
-  top: 6px;
-  left: -1px;
-  font-size: 0;
-  background-color: #4320A8;
-  height: 20px;
-  width: 38px !important;
-  clip-path: polygon(0% 0%, 70% 0, 100% 50%, 70% 100%, 0% 100%);
+    &::before {
+      content: '%';
+      display: block;
+      margin: 2px 0 0 7px;
+      color: $white;
+      font-weight: 400;
+      font-size: 16px;
+    }
+  }
 
-  &::before {
-    content: '%';
-    display: block;
-    margin: 2px 0 0 7px;
-    color: #FFF;
-    font-weight: 400;
-    font-size: 16px;
+  &--pdp {
+    height: 1.25rem;
+    color: #4320a8;
+    font-size: $headline-h4;
+    font-weight: bold;
+    line-height: 1.25rem;
+    align-self: flex-end;
+    margin-bottom: 0.5rem;
   }
 }
 
-.sellingPriceValue--pdp {
-  color: $secondary-dark;
-  font-size: $headline-h1;
-  font-weight: 400;
-  padding-top: 10px;
+.sellingPriceValue {
+  &--pdp {
+    height: 2.5rem;
+    font-size: $headline-h1;
+    font-weight: 900;
+    line-height: 2.5rem;
+    color: $blue-dark;
+  }
 }
 
-.listPrice--pdp {
-  font-size: $paragraph-medium-regular;
-  color: $darkgrey-light;
-  line-height: 20px;
-  font-weight: 500;
-  margin-right: 8px;
+.sellingPrice {
+  &--pdp {
+    margin: 0 2rem 0 0;
+  }
 }
 
-.savings--pdp {
-  font-size: $cta-small;
-  color: $system-alert-default;
-  font-weight: 700;
-  background: $system-alert-light;
-  padding: 4px;
-  border-radius: 4px;
+.listPriceValue {
+  &--pdp {
+    height: 100%;
+    color: $primary-default;
+    font-size: $paragraph-medium-regular;
+    line-height: 1rem;
+    display: flex;
+    align-items: flex-end;
+  }
 }
+
+.listPrice {
+  &--pdp {
+    margin: 0 1.25rem 0.5rem 0;
+  }
+}
+
 .sellerNameContainer {
   font-size: $paragraph-small-medium;
   font-weight: 500;
@@ -61,13 +82,29 @@
   :global(.vtex-product-price-1-x-sellerName) {
     margin-left: 2px;
   }
+
+  &--isDefaultSeller {
+    display: inline-block;
+    line-height: 18px;
+    margin: 1rem 0;
+    .sellerName {
+      color: $primary-pink;
+    }
+  }
 }
 
-.sellerNameContainer--isDefaultSeller {
-  display: inline-block;
-  line-height: 18px;
-  margin: 1rem 0;
-  .sellerName {
-    color: $primary-pink;
+.installments {
+  &--pdp {
+    margin: 0;
+    height: 1.25rem;
+    color: $primary-default;
+    font-size: 16px;
+    line-height: 1.25rem;
+  }
+
+  .currencyContainer {
+    &--pdp {
+      font-weight: bold;
+    }
   }
 }
