--- a/sass/vtex.order-placed.scss
+++ b/sass/vtex.order-placed.scss
@@ -18,7 +18,7 @@
 
 .orderPlacedHeader {
     :global(.vtex-button) {
-        background: #E30613;
+        background: #291660;
         border: none;
         color: #fff;
         transition: .2s ease-in-out;
@@ -27,7 +27,7 @@
         padding: 12px 20px;
 
         &:hover {
-            background: #b9141f;
+            background: #1B0E41;
         }
     }
 }
