--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -81,43 +81,10 @@
   }
 }
 
-.carouselGaleryThumbs--pdp {
-  width: 15% !important;
-  z-index: 0;
-}
-.figure--pdp {
-  .thumbImg {
-    width: 64px;
-    height: 64px;
-    border-radius: 8px;
-    border: 2px solid transparent;
-    overflow: hidden;
-  }
-}
-.productImagesThumbActive {
-  .thumbImg {
-    border: 2px solid $secondary-dark;
-  }
-}
-
 .swiper-pagination {
   position: initial;
 }
 
-.carouselGaleryCursor {
-  width: 90%;
-  float: right;
-
-  @include mobile {
-    margin: 0 auto;
-    float: none;
-  }
-
-  .productImagesGallerySwiperContainer--pdp {
-    margin-bottom: 32px;
-    z-index: 0;
-  }
-}
 .productImage--pdp {
   border-radius: 16px;
   overflow: hidden;
@@ -264,5 +231,68 @@
 .productDescriptionText {
   &--pdp {
     margin: 0 0 1.25rem;
+  }
+}
+
+.productImagesThumbCaret {
+  &--pdp {
+    background: $white;
+  }
+}
+
+.figure {
+  &--pdp {
+    margin: 0 0 0 1rem;
+
+    .thumbImg {
+      height: 80;
+      overflow: hidden;
+    }
+  }
+}
+
+.productImagesContainer {
+  &--pdp--carousel {
+    padding-right: 7.75rem;
+  }
+}
+
+.carouselGaleryThumbs {
+  &--pdp {
+    .gradientBaseRight {
+      padding: 0 0 0 1rem;
+
+      &::after {
+        content: '';
+        background-image: url("data:image/svg+xml,%3Csvg width='26px' height='26px' viewBox='0 0 26 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EFBEA335C-9973-4AF9-8CD9-34D7FAD7D817%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='D/-3.1-PDP-no-review---no-q&amp;a' transform='translate(-561.000000, -634.000000)' stroke='%23291660'%3E%3Cg id='image-side' transform='translate(64.000000, 176.000000)'%3E%3Cg id='right' transform='translate(497.000000, 458.000000)'%3E%3Ccircle id='Oval' fill='%23FFFFFF' cx='13' cy='13' r='12.5'%3E%3C/circle%3E%3Cg id='chevron-down-copy' transform='translate(13.000000, 13.000000) scale(-1, -1) translate(-13.000000, -13.000000) translate(11.000000, 9.000000)' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline id='Path' points='4 8 0 4 4 0'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        display: inline-block;
+        height: 26px;
+        width: 26px;
+      }
+    }
+
+    .gradientBaseLeft {
+      padding: 0 1rem 0 0;
+
+      &::after {
+        content: '';
+        background-image: url("data:image/svg+xml,%3Csvg width='26px' height='26px' viewBox='0 0 26 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3E0EBDCCC6-6D2E-4603-A174-8B4127F8A123%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='D/-3.0.2-PDP-open-info' transform='translate(-80.000000, -634.000000)' stroke='%23291660'%3E%3Cg id='image-side' transform='translate(64.000000, 176.000000)'%3E%3Cg id='left' transform='translate(16.000000, 458.000000)'%3E%3Ccircle id='Oval' fill='%23FFFFFF' cx='13' cy='13' r='12.5'%3E%3C/circle%3E%3Cg id='chevron-down' transform='translate(13.000000, 13.000000) scale(1, -1) translate(-13.000000, -13.000000) translate(11.000000, 9.000000)' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline id='Path' points='4 8 0 4 4 0'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        display: inline-block;
+        height: 26px;
+        width: 26px;
+      }
+    }
+
+    .caretIcon {
+      &--pdp {
+        display: none;
+      }
+    }
   }
 }
