feat(pdp): adjusted description and faq sections

--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -25,7 +25,7 @@
       &--home-services,
       &--home-blog {
         height: 16px;
-        color: #4320a8;
+        color: $blue-dark;
       }
     }
   }
