--- a/sass/footer/vtex.slider-layout.scss
+++ b/sass/footer/vtex.slider-layout.scss
@@ -41,7 +41,7 @@
 
     .caretIcon {
       &--home-main-slider-images,
-      &--shelfAlsoView,
+      &--shelf-also-view,
       &--quemSomos-carrosel {
         width: 16px !important;
         height: 16px;
