--- a/sass/product/vtex.disclosure-layout.scss
+++ b/sass/product/vtex.disclosure-layout.scss
@@ -1,7 +1,37 @@
-@import '../_media-queries.scss';
 @import '../_variables.scss';
+@import '../_media-queries.scss';
 
-.trigger--containerShippingMenu {
-  background-color: $white;
-  border: none;
+.trigger {
+  &--pdp-faq-trigger {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    border-top: 1px solid #d8d8d8;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0;
+    padding: 0;
+
+    &--hidden {
+      :global(.vtex-rich-text-0-x-paragraph--pdp-faq-trigger) {
+        height: 1.25rem;
+        color: $primary-default;
+        font-size: $headline-h4;
+        font-weight: 400;
+        line-height: 1.25rem;
+      }
+    }
+
+    &--visible {
+      :global(.vtex-rich-text-0-x-paragraph--pdp-faq-trigger) {
+        height: 1.25rem;
+        color: $primary-default;
+        font-size: $headline-h4;
+        font-weight: 500;
+        line-height: 1.25rem;
+      }
+    }
+  }
 }
