--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -268,10 +268,12 @@
     padding-bottom: 6px;
   }
 }
+
 .flexCol {
   &--summaryInfo {
     padding: 10px;
   }
+
   &--buyButtonContainer {
     padding: 0 4px;
   }
@@ -284,6 +286,10 @@
 }
 
 .flexRow {
+  &--product-main-content {
+    margin-bottom: 2rem;
+  }
+
   &--breadcrumb {
     padding: 0.5rem 0 1.25rem;
     @include mobile {
@@ -314,6 +320,123 @@
 
       @media (max-width: 64rem) {
         gap: 0;
+      }
+    }
+  }
+
+  &--related-products {
+    @include container-main;
+  }
+
+  &--pdp-faq {
+    background-color: #f6f6f6;
+
+    .flexRowContent {
+      &--pdp-faq {
+        @include container-main;
+
+        max-width: 61rem;
+      }
+    }
+  }
+
+  .flexRowContent {
+    &--product-details {
+      :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+        &:last-child {
+          justify-content: flex-end;
+        }
+      }
+    }
+
+    &--product-main-content {
+      @include container-main;
+    }
+
+    &--pdp-rating-and-whishlist {
+      :global(.vtex-reviews-and-ratings-3-x-star) {
+        margin-right: 0.25rem;
+        color: #e3c963;
+      }
+
+      :global(.vtex-reviews-and-ratings-3-x-stars) {
+        margin-right: 1.25rem;
+        padding-right: 1rem;
+        border-right: solid 1px #bebebe;
+        color: #e3c963;
+      }
+
+      :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+        width: auto !important;
+      }
+
+      :global(.vtex-reviews-and-ratings-3-x-inlineContainer) {
+        align-self: center;
+      }
+    }
+
+    &--also-view {
+      @include container-main;
+    }
+
+    &--productSpecificationItem {
+      @include mobile {
+        height: 0;
+      }
+    }
+
+    &--pdp-shipping {
+      border: 1px solid $primary-light;
+      border-radius: 0.25rem;
+      padding: 1rem;
+      margin-bottom: 1.25rem;
+    }
+
+    &--pdp-product-and-shipping-description {
+      .stretchChildrenWidth {
+        flex-direction: column;
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger) {
+        background-color: transparent;
+        border-top: 1px solid #d8d8d8;
+        border-left: none;
+        border-right: none;
+        border-radius: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger--hidden) {
+        border-bottom: 1px solid #d8d8d8;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+
+      :global(.vtex-disclosure-layout-1-x-trigger--visible) {
+        border-bottom: none;
+
+        &:first-child {
+          border-bottom: none;
+        }
+      }
+    }
+
+    &--pdp-faq-disclousure-layout {
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #d8d8d8;
+
+      .stretchChildrenWidth {
+        display: flex;
+        flex-direction: column;
       }
     }
   }
@@ -468,13 +591,18 @@
     max-width: 564px;
   }
 
-  .flexRowContent--productMain-descSpec {
+  .flexRowContent--product-main-descSpec {
     @include container-main;
+
+    margin: 0 auto 2.5rem;
+  }
+
+  &--specBox {
+    max-width: 33.5rem;
   }
 
   .flexRowContent--specBox {
-    margin: 20px auto 0;
-    padding-bottom: 38px;
+    margin: 0;
 
     @include breakpoint('mobile') {
       padding-top: 24px;
@@ -485,35 +613,24 @@
         padding: 0 !important;
       }
     }
-    :global(.vtex-rich-text-0-x-paragraph--specification-title) {
-      font-size: 30px;
-      font-weight: 300;
-      color: $primary-dark;
-      margin-left: 3rem;
-      @include breakpoint('mobile') {
-        text-align: center;
-      }
-    }
+
     .flexRow--productSpecificationItem {
-      padding-left: 20px;
-      padding-bottom: 32px;
+      border-top: 1px solid #d8d8d8;
+
+      &:first-child {
+        border-top: none;
+      }
+
       .stretchChildrenWidth:first-child {
         width: 40% !important;
       }
+
       .flexColChild {
-        border-radius: 4px;
-        padding: 1rem;
-      }
-      &:nth-child(odd) {
-        .flexColChild {
-          background-color: $lightgrey-lighter;
-        }
+        padding: 0.5rem 1.25rem;
+        background-color: #f6f6f6;
       }
 
       @media (max-width: 1025px) {
-        padding: 16px;
-        padding-right: 0;
-
         &:first-child {
           margin-top: 24px;
         }
@@ -559,36 +676,28 @@
   }
   // Shelves end
 
-  // ShelfStyle Start
-  .flexRowContent--shelfControlsTitle {
-    margin-bottom: 1.5rem;
-    padding: 0;
-  }
-  // ShelfStyle End
-
   // PDP start
-
-  .flexRowContent--productMain-content {
-    @include container-main;
-  }
-
   .flexRowContent--boxLine {
     flex-direction: column;
   }
-  .flexCol--productMain-image {
+
+  .flexCol--product-main-image {
     @include mobile {
       margin-bottom: 1rem;
     }
   }
   .flexCol--product-main-infos {
     padding: 0 1.5rem;
+
     :global(.vtex-store-components-3-x-productDescriptionTitle) {
       font-size: 0;
       display: none;
     }
+
     :global(.vtex-store-components-3-x-pointerEventsAuto) {
       display: none;
     }
+
     :global(.vtex-store-components-3-x-productDescriptionText) {
       display: -webkit-box;
       -webkit-box-orient: vertical;
@@ -597,34 +706,41 @@
       white-space: pre-line;
       overflow: hidden;
     }
+
     :global(.vtex-store-link-0-x-link--completeDescriptionAnchor) {
       color: $primary-pink;
       text-decoration: none;
       font-size: 12px;
       margin-top: 1rem;
       font-weight: 500;
+
       @include mobile {
         margin-bottom: 2rem;
       }
     }
   }
+
   .flexRowContent--product-price {
     .flexCol {
       flex-direction: column-reverse;
     }
   }
-  .flexRowContent--productMain-price {
+
+  .flexRowContent--product-main-price {
     @include mobile {
       display: flex;
     }
   }
-  .flexRow--productMain-price {
+
+  .flexRow--product-main-price {
     :global(.vtex-product-price-1-x-savings--savingPercentage) {
       margin: 0 0 0 5px;
       background-color: $primary-default;
+
       @include mobile {
         background-color: $secondary-default;
       }
+
       :global(.vtex-product-price-1-x-savingsPercentage) {
         color: $white;
         padding-left: 4px;
@@ -632,20 +748,23 @@
           color: $primary-default;
         }
       }
+
       &::after {
         color: $white;
+
         @include mobile {
           color: $primary-default;
         }
       }
     }
 
-    .flexCol--productMain-price {
+    .flexCol--product-main-price {
       flex-flow: row wrap;
       height: 30px;
       max-width: 200px;
       line-height: 10px;
       margin: 0 0 20px;
+
       :global(.vtex-product-price-1-x-savings--savingPercentage) {
         position: static;
         display: none;
@@ -653,23 +772,18 @@
     }
   }
 
-  .flexColChild--productMain-box {
+  .flexColChild--product-main-box {
     background: $white;
     padding: 0 1.5rem 1rem;
     border-radius: 16px;
+
     :global(.vtex-numeric-stepper-container) {
       height: 48px !important;
     }
+
     @include mobile {
       margin: 0 1.2rem;
       border-radius: 8px;
-    }
-  }
-
-  .flexRowContent--pdp-shippingContainer {
-    .stretchChildrenWidth {
-      display: flex;
-      flex-direction: column-reverse;
     }
   }
 
@@ -682,18 +796,23 @@
     padding: 1.3rem 2rem 1.5rem;
     position: relative;
     top: 0;
+
     @include breakpoint('mobile') {
       max-height: 11rem !important;
       padding-top: 0.2rem;
     }
+
     :global(.vtex-rich-text-0-x-wrapper) {
       padding-top: 1.8rem;
+
       @include breakpoint('mobile') {
         padding-top: 0;
       }
     }
+
     :global(.vtex-input__label) {
       font-size: 0;
+
       &::before {
         display: none;
         font-size: 20px;
@@ -701,6 +820,7 @@
         color: $primary-dark;
       }
     }
+
     .sellerShipping {
       border: none;
       border-radius: 0 0 1.5rem 1.5rem;
@@ -708,30 +828,37 @@
       height: 8rem !important;
       padding-bottom: 10px;
     }
+
     :global(.vtex-seller-selector-0-x-simulateShipping) {
       margin: 0;
       border: none;
       margin-left: -5rem;
+
       @include breakpoint('mobile') {
         margin-left: -1rem;
         margin-top: -2rem;
       }
     }
+
     :global(.vtex-input-prefix__group) {
       width: 80%;
       height: 48px;
       border: 1px solid $lightgrey-light;
       background-color: $white;
+
       @include breakpoint('mobile') {
         width: 70%;
       }
+
       :global(.vtex-address-form-4-x-input) {
         background-color: $white;
       }
+
       :global(.vtex-input__suffix) {
         display: none;
       }
     }
+
     :global(.vtex-button) {
       width: 25%;
       position: absolute;
@@ -741,11 +868,14 @@
       background-color: $secondary-default;
       border-radius: 10px;
       border: none;
+
       @include breakpoint('mobile') {
         top: 4.5rem;
       }
+
       :global(.vtex-button__label) {
         font-size: 0;
+
         &::before {
           content: 'Ok';
           font-size: 14px;
@@ -760,21 +890,26 @@
     width: 340px;
     height: 72px;
     position: relative;
+
     :global(.vtex-input__label) {
       font-size: 0;
     }
+
     :global(.vtex-input-prefix__group) {
       width: 70%;
       height: 48px;
       border: 1px solid $lightgrey-light;
       background-color: $white;
+
       :global(.vtex-address-form-4-x-input) {
         background-color: $white;
       }
+
       :global(.vtex-input__suffix) {
         display: none;
       }
     }
+
     :global(.vtex-button) {
       width: 25%;
       position: absolute;
@@ -785,8 +920,10 @@
       border-color: #e30613 !important;
       cursor: pointer;
       border-radius: 10px;
+
       :global(.vtex-button__label) {
         font-size: 0;
+
         &::before {
           content: 'Calcular';
           text-transform: capitalize;
@@ -799,6 +936,7 @@
         }
       }
     }
+
     :global(.vtex-address-form__postalCode-forgottenURL) {
       font-size: 8px;
       opacity: 0;
@@ -806,6 +944,7 @@
       display: block;
       transform: translate(108px, -12px);
     }
+
     :global(.vtex-address-form__field--small) {
       &::before {
         display: block;
@@ -830,41 +969,32 @@
         width: 104px;
       }
     }
+
     :global(.vtex__icon-external-link) {
       width: 0;
       height: 0;
     }
+
     .stretchChildrenWidth {
       display: block;
     }
   }
 
-  .flexRow--productMain-descSpec {
+  .flexRow--product-main-descSpec {
     margin-bottom: 2rem;
-    .flexRowContent--productMain-descSpec {
-      @include container-main;
-    }
+
     .stretchChildrenWidth:first-child {
       padding-right: 1rem;
     }
+
     .stretchChildrenWidth:last-child {
       padding-left: 1rem;
       margin: 2rem 0 0;
+
       @include mobile {
         margin-top: 0;
       }
-      :global(.vtex-rich-text-0-x-paragraph--specification-title) {
-        background-color: transparent !important;
-        color: $primary-dark;
-        font-size: 30px;
-        font-weight: 300;
-        margin-bottom: 2rem;
-        margin-left: 0.2rem;
-        @include breakpoint('mobile') {
-          text-align: center;
-          margin-left: 4rem;
-        }
-      }
+
       .stretchChildrenWidth {
         margin: 0;
       }
@@ -891,6 +1021,7 @@
         line-height: 24px;
         font-weight: 400;
       }
+
       :global(.vtex-product-specifications-1-x-specificationValue--specText) {
         color: $primary-dark;
         font-size: 14px;
@@ -900,7 +1031,7 @@
     }
   }
 
-  .flexCol--productMain-top {
+  .flexCol--product-main-top {
     padding: 0 1.5rem;
   }
 
@@ -921,147 +1052,6 @@
 
   &--pdp-price {
     margin-bottom: 1rem;
-  }
-
-  .flexRowContent {
-    &--pdp-rating-and-whishlist {
-      :global(.vtex-reviews-and-ratings-3-x-star) {
-        margin-right: 0.25rem;
-        color: #e3c963;
-      }
-
-      :global(.vtex-reviews-and-ratings-3-x-stars) {
-        margin-right: 1.25rem;
-        padding-right: 1rem;
-        border-right: solid 1px #bebebe;
-        color: #e3c963;
-      }
-
-      :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-        width: auto !important;
-      }
-
-      :global(.vtex-reviews-and-ratings-3-x-inlineContainer) {
-        align-self: center;
-      }
-    }
-
-    &--pdp-Containergalery {
-      display: flex;
-      margin: 0 auto;
-      flex-flow: row wrap;
-      max-width: 1200px;
-
-      .stretchChildrenWidth {
-        width: 250px !important;
-        height: 250px !important;
-        margin: 10px;
-        &:first-child {
-          width: 42% !important;
-          height: 42% !important;
-        }
-        &:nth-child(4n) {
-          margin-left: 44.5%;
-          margin-top: -270px;
-        }
-        &:last-child {
-          margin-top: -270px;
-        }
-      }
-    }
-
-    &--pdp-descriptionIframeSection {
-      @include container-main;
-    }
-
-    &--alsoView {
-      @include container-main;
-      .flexRowContent--shelfControls {
-        margin: 0 0 1.8rem;
-        padding: 0;
-        justify-content: center;
-        @include mobile {
-          padding-left: 1.2rem;
-        }
-        :global(.vtex-rich-text-0-x-heading--productShelfTitle) {
-          color: $primary-dark;
-          font-size: 2.2rem;
-          font-weight: 300;
-          @include breakpoint('mobile') {
-            font-size: 2rem;
-          }
-        }
-      }
-    }
-
-    &--pdp-Containermanual {
-      :global(.vtex-store-link-0-x-link--pdp-manual) {
-        background-color: $secondary-default;
-        border-radius: 10px;
-        border: none;
-        color: $white;
-        font-size: 1.1rem;
-        padding: 15px;
-        text-align: center;
-        text-decoration: none;
-        width: 250px;
-      }
-    }
-
-    &--productPage-specificationBenefits {
-      @include container-main;
-    }
-
-    &--productSpecificationItem {
-      @include mobile {
-        height: 0;
-      }
-    }
-
-    &--pdp-shipping {
-      border: 1px solid $primary-light;
-      border-radius: 0.25rem;
-      padding: 1rem;
-      margin-bottom: 1.25rem;
-    }
-
-    &--pdp-product-and-shipping-description {
-      .stretchChildrenWidth {
-        flex-direction: column;
-      }
-
-      :global(.vtex-disclosure-layout-1-x-trigger) {
-        background-color: transparent;
-        border-top: 1px solid #d8d8d8;
-        border-left: none;
-        border-right: none;
-        border-radius: 0;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        &:first-child {
-          border-bottom: none;
-        }
-      }
-
-      :global(.vtex-disclosure-layout-1-x-trigger--hidden) {
-        border-bottom: 1px solid #d8d8d8;
-
-        &:first-child {
-          border-bottom: none;
-        }
-      }
-
-      :global(.vtex-disclosure-layout-1-x-trigger--visible) {
-        border-bottom: none;
-
-        &:first-child {
-          border-bottom: none;
-        }
-      }
-    }
   }
 
   .flexCol {
