--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -8,9 +8,9 @@
   position: relative;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 0 0.4em rgba(0,0,0,0.3);
+  box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.3);
   transition: all 0.4s ease;
-  &:hover{
+  &:hover {
     height: 486px;
     transition: all 0.3s ease;
   }
@@ -165,20 +165,20 @@
         font-size: 12px;
         display: flex;
         align-items: center;
-        color: #1D1E2C;
+        color: #1d1e2c;
         padding-top: 2px;
         text-transform: lowercase;
       }
     }
   }
 
-  :global(.vtex-product-price-1-x-installments--productMain-installments) {
+  :global(.vtex-product-price-1-x-installments--product-main-installments) {
     display: block;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    color: #4320AB;
+    color: #4320ab;
     text-align: center;
     margin: 30px 22px 10px;
 
@@ -188,10 +188,9 @@
   }
 
   :global(.vtex-flex-layout-0-x-flexCol--buyButtonContainer) {
-
     :global(.vtex-numeric-stepper-wrapper) {
       border-radius: 8px;
-      border: 1px solid #4320A8;
+      border: 1px solid #4320a8;
       margin-top: 0.5rem;
 
       :global(.vtex-numeric-stepper-container) {
@@ -315,10 +314,10 @@
   :global(.vtex-flex-layout-0-x-flexRow--product-summary-buy-button),
 :global(.vtex-flex-layout-0-x-flexCol--buyButtonContainer)
   :global(.vtex-button) {
-  background-color: #FFF;
-  color: #4320A8;
+  background-color: #fff;
+  color: #4320a8;
   border-radius: 4px;
-  border: 1px solid #4320A8;
+  border: 1px solid #4320a8;
   margin-top: 0.5rem;
   transition: all 0.3s ease;
   min-height: 48px;
@@ -328,13 +327,13 @@
     font-size: 14px;
     font-weight: 600;
     padding: 0;
-    color: #4320A8;
+    color: #4320a8;
     &:hover {
-      color: #FFF;
+      color: #fff;
     }
   }
   &:hover {
-    background: #4320A8 !important;
+    background: #4320a8 !important;
   }
 }
 
@@ -353,17 +352,17 @@
 .element--summaryComplete .sellingPriceLabel {
   display: none;
 }
-.price_sellingPriceContainer{
-  color: #4320A8;
+.price_sellingPriceContainer {
+  color: #4320a8;
 }
-:global(.vtex-product-summary-2-x-element--summaryComplete){
+:global(.vtex-product-summary-2-x-element--summaryComplete) {
   font-size: 20px;
   font-weight: 800;
-  color: #4320A8;
+  color: #4320a8;
 }
 
 .element--summaryComplete .listPrice {
-  color: #332C32;
+  color: #332c32;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -376,7 +375,7 @@
   font-weight: 600;
   font-size: 18px !important;
   line-height: 22px;
-  color: #332C32;
+  color: #332c32;
   padding-bottom: 10px;
 }
 
